fix: added profile page layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,7 +59,10 @@
       ],
       "@router/*": [
         "./src/router/*"
-      ]
+      ],
+      "@utils/*": [
+        "./src/utils/*"
+      ],
     }
   },
   "include": [
