--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
+    "@mui/material-nextjs": "^6.1.1",
     "@mui/styled-engine-sc": "^6.0.1",
     "@prisma/client": "^5.19.0",
     "@tanstack/react-query": "^5.53.1",
