--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-POSTGRES_DB=superb-db
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin@123
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_PRISMA_URL=postgresql://admin:admin@123@postgres:5432/superb-db?schema=public
-POSTGRES_URL_NON_POOLING=postgresql://admin:admin@123@postgres:5432/superb-db?schema=public
+DATABASE_URL=postgresql://admin:admin@123@localhost:5432/superb-db?schema=public
