--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,17 @@
+version: '3.8'
+
 services:
   postgres:
     image: postgres:latest
+    container_name: postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      POSTGRES_DB: superb-db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin@123
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
