--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "@mui/material": "^6.0.1",
     "@mui/material-nextjs": "^6.1.1",
     "@mui/styled-engine-sc": "^6.0.1",
-    "@prisma/client": "^5.19.0",
-    "@tanstack/react-query": "^5.53.1",
+    "@tanstack/react-query": "^5.19.0",
     "@trpc/client": "^11.0.0-rc.490",
+    "@trpc/react-query": "^11.0.0-rc.490",
     "@trpc/server": "^11.0.0-rc.490",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.13",
+    "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@prisma/client": "^5.20.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -34,7 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "prisma": "^5.19.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
