--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.705.0",
+    "@aws-sdk/s3-request-presigner": "^3.705.0",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -20,8 +22,11 @@
     "@trpc/client": "^11.0.0-rc.490",
     "@trpc/react-query": "^11.0.0-rc.490",
     "@trpc/server": "^11.0.0-rc.490",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -31,8 +36,10 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/aws-sdk": "^2.7.4",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
