--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
