--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@prisma/client": "^6.1.0",
     "@types/aws-sdk": "^2.7.4",
     "@types/bcrypt": "^5.0.2",
@@ -46,11 +47,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-query": "^1.2.8",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.7",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
     "postcss": "^8",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.18.2"
   }
 }
